bk_ida/gobmkida/c2/do_owl_defend
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_defend/src/engine/owl.c:2273:10: error: conflicting types for 'do_owl_defend'
__int64  do_owl_defend( 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_defend/src/engine/owl.c:138:12: note: previous declaration is here
static int do_owl_defend(int str, int *move, int *wormid,
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_defend/src/engine/owl.c:2385:9: error: use of undeclared identifier 'eyevalue'
v79 = ( eyevalue)-1; 
        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_defend/src/engine/owl.c:2563:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[i] != 3 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_defend/src/engine/owl.c:2629:5: error: invalid operands to binary expression ('struct eyevalue' and 'int')
v79 == 1, 
~~~ ^  ~
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_owl_defend/src/obj/1/owl.o] Error 1
